<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game6Activity"
    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/game6_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp"
        android:paddingHorizontal="20dp"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_game6_timeCunt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="20"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:fontFamily="@font/regular"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/img_game6_next"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/game6_titleBar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleBar"
            android:text="@string/issue_6"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:fontFamily="@font/regular"/>


        <ImageView
            android:id="@+id/img_game4_issue"
            android:layout_width="330dp"
            android:layout_height="290dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="#FFF8D7"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:gravity="center_vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_game6_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/btn_game6_ansA"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_1"
                        android:textSize="14sp"/>

                    <Button
                        android:id="@+id/btn_game6_ansB"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_2"
                        android:layout_marginLeft="10dp"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/btn_game6_ansC"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_3"
                        android:textSize="14sp"/>

                    <Button
                        android:id="@+id/btn_game6_ansD"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_4"
                        android:layout_marginLeft="10dp"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/btn_game6_ansE"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_5"
                        android:textSize="14sp"/>

                    <Button
                        android:id="@+id/btn_game6_ansF"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_6"
                        android:layout_marginLeft="10dp"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/btn_game6_ansG"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_7"
                        android:textSize="14sp"/>

                    <Button
                        android:id="@+id/btn_game6_ansH"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_8"
                        android:layout_marginLeft="10dp"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/btn_game6_ansI"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_9"
                        android:textSize="14sp"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#8F9872"
                        android:text="@string/answer_6_8"
                        android:layout_marginLeft="10dp"
                        android:textSize="14sp"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>